--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,13 @@ management.tracing.sampling.probability=1.0
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show.details=always
 
+#logging
+logging.level.root=INFO
+logging.level.org.springframework.cloud.gateway=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web.reactive.function.client=TRACE
+logging.level.org.hibernate.stat=debug
+
 ## Database Configuration
 #spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 #spring.datasource.username=postgres
