--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,15 +17,18 @@ logging.level.root=INFO
 logging.level.org.springframework.cloud.gateway=DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web.reactive.function.client=TRACE
-logging.level.org.hibernate.stat=debug
 
 ## Database Configuration
-#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-#spring.datasource.username=postgres
-#spring.datasource.password=12345
-#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.hibernate.ddl-auto=update
-##spring-jpa.properties.hibernate.generate_statistics=true
-#spring-jpa.show-sql=true
-#spring-jpa.properties.hibernate.format_sql=true
+# Enabling H2 Console
+spring.h2.console.enabled=true
+#Turn Statistics on
+#spring.jpa.properties.hibernate.generate_statistics=true
+logging.level.org.hibernate.stat=debug
+# Show all queries
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.type=trace
+spring.datasource.url=jdbc:h2:mem:subdrivedb
+spring.data.jpa.repositories.bootstrap-mode=default
+spring.jpa.defer-datasource-initialization=true
+spring.h2.console.path=/h2-console
